--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>BrainForge</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link href="design/indexD.css" rel="stylesheet" type="text/css">
+    <link href="design/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body style="background-image: url('/design/nik-iurev-7h82oLj3GA0-unsplash.jpg'); background-repeat: no-repeat; background-size: cover;">
 <section class="img_section">
