--- a/main_menu.html
+++ b/main_menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Main menu</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link href="design/indexD.css" rel="stylesheet" type="text/css">
+    <link href="design/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <section class="img_section">
