--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Верхній прямокутник -->
     <div class="rectangle">
         <div class="upper_text">
+            <a href="#">Menu</a>
             <a href="#">Profile</a>
             <a href="#">Practice Tasks</a>
             <a href="#">Focus Tasks</a>
@@ -36,13 +37,13 @@
                 <span class="close" id="closeModal">&times;</span>
                 <h1>Sign in</h1>
                 <label>Username</label>
-                <input type="text" placeholder="User name">
+                <input type="text" placeholder="Username">
                 <label>Password</label>
                 <input type="password" placeholder="Password">
                 <div class="forgot-password">
                     <a href="#" style="margin-left: 150px;">Forgot password?</a>
                 </div>
-                <button class="login-btn" onclick="goMainMenu()" >Sign in</button>
+                <button class="login-btn" onclick="goMainMenu()">Sign in</button>
                 <button class="create-btn" id="openRegister">Create an account</button>
             </div>
         </div>
