--- a/pages/focus.html
+++ b/pages/focus.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Profile</title>
+    <title>Focus</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link href="../css/profile.css" rel="stylesheet" type="text/css">
-
+    <link href="../css/styles_menu.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <section class="img_section">
@@ -22,14 +21,6 @@
             <a href="../index.html">Log out</a>
         </div>
     </div>
-    <div class="wrapper">
-        <div class="photo_rect"></div>
-    </div>
-    <div class="wrapper">
-        <div class="info_rect"></div>
-    </div>
-
-
 </section>
 </body>
 </html>
