--- a/pages/menu_page.html
+++ b/pages/menu_page.html
@@ -10,13 +10,14 @@
 <section class="img_section">
     <div class="rectangle">
         <div class="upper_text">
+            <a href="menu_page.html">Menu</a>
             <a href="profile.html">Profile</a>
-            <a href="#">Practice Tasks</a>
-            <a href="#">Focus Tasks</a>
-            <a href="#">AI assistant</a>
+            <a href="practice.html">Practice Tasks</a>
+            <a href="focus.html">Focus Tasks</a>
+            <a href="chat_bot.html">AI assistant</a>
         </div>
         <div class="upper_text_left">
-            <a href="#">Contact us</a>
+            <a href="#">Join our team</a>
             <a href="../index.html">Log out</a>
         </div>
     </div>
@@ -27,17 +28,17 @@
         <h2>Profile</h2>
         <h3>View and edit your account.</h3>
     </div>
-    <div class="menu_rect">
+    <div class="menu_rect" id="practice">
         <img src="../images/coding(1).png" class="menu_icon" alt="practice">
         <h2>Practice</h2>
         <h3>Hone your skills every day.</h3>
     </div>
-    <div class="menu_rect">
+    <div class="menu_rect" id="focus">
         <img src="../images/browser.png" class="menu_icon" alt="focus">
         <h2>Focus</h2>
         <h3>Stay on track without distractions.</h3>
     </div>
-    <div class="menu_rect">
+    <div class="menu_rect" id="chat">
         <img src="../images/chatbot.png" class="menu_icon" alt="chat-bot">
         <h2>AI chat</h2>
         <h3>Get answers and tips from AI.</h3>
