Add profile page

--- a/pages/chat_bot.html
+++ b/pages/chat_bot.html
@@ -14,7 +14,7 @@
       <a href="profile.html">Profile</a>
       <a href="practice.html">Practice Tasks</a>
       <a href="focus.html">Focus Tasks</a>
-      <a href="chat_bot.html">AI assistant</a>
+      <a href="chat_bot.html" style="color: #00aaff">AI assistant</a>
     </div>
     <div class="upper_text_left">
       <a href="#">Join our team</a>
