--- a/pages/menu_page.html
+++ b/pages/menu_page.html
@@ -10,7 +10,7 @@
 <section class="img_section">
     <div class="rectangle">
         <div class="upper_text">
-            <a href="menu_page.html">Menu</a>
+            <a href="menu_page.html" style="color: #00aaff">Menu</a>
             <a href="profile.html">Profile</a>
             <a href="practice.html">Practice Tasks</a>
             <a href="focus.html">Focus Tasks</a>
@@ -30,20 +30,24 @@
     </div>
     <div class="menu_rect" id="practice">
         <img src="../images/coding(1).png" class="menu_icon" alt="practice">
-        <h2>Practice</h2>
+        <h2>Practice tasks</h2>
         <h3>Hone your skills every day.</h3>
     </div>
     <div class="menu_rect" id="focus">
         <img src="../images/browser.png" class="menu_icon" alt="focus">
-        <h2>Focus</h2>
+        <h2>Focus tasks</h2>
         <h3>Stay on track without distractions.</h3>
     </div>
+<!--    <div class="menu_rect" id="math">-->
+<!--        <img src="../images/calculating.png" class="menu_icon" alt="chat-bot">-->
+<!--        <h2>Math for programmers</h2>-->
+<!--        <h3>Understand math behind algorithms.</h3>-->
+<!--    </div>-->
     <div class="menu_rect" id="chat">
         <img src="../images/chatbot.png" class="menu_icon" alt="chat-bot">
         <h2>AI chat</h2>
         <h3>Get answers and tips from AI.</h3>
     </div>
-
 </div>
 </section>
 <script src="/js/menu_js.js"></script>
