--- a/pages/focus.html
+++ b/pages/focus.html
@@ -13,7 +13,7 @@
             <a href="menu_page.html">Menu</a>
             <a href="profile.html">Profile</a>
             <a href="practice.html">Practice Tasks</a>
-            <a href="focus.html">Focus Tasks</a>
+            <a href="focus.html" style="color: #00aaff">Focus Tasks</a>
             <a href="chat_bot.html">AI assistant</a>
         </div>
         <div class="upper_text_left">
