--- a/pages/practice.html
+++ b/pages/practice.html
@@ -12,7 +12,7 @@
     <div class="upper_text">
       <a href="menu_page.html">Menu</a>
       <a href="profile.html">Profile</a>
-      <a href="practice.html">Practice Tasks</a>
+      <a href="practice.html" style="color: #00aaff">Practice Tasks</a>
       <a href="focus.html">Focus Tasks</a>
       <a href="chat_bot.html">AI assistant</a>
     </div>
