Add practice page

--- a/index.html
+++ b/index.html
@@ -122,25 +122,19 @@
 
         <!-- Ліва частина -->
         <div class="about_left">
-            <h1>BrainForge</h1>
+            <h1 style="color: #00aaff">BrainForge</h1>
 
             <div class="about_text_columns">
                 <p>
-                    Text Text Text Text Text Text Text<br>
-                    Text Text Text Text Text Text Text<br>
-                    Text Text Text Text Text Text Text<br>
-                    Text Text Text Text Text Text Text<br>
-                    Text Text Text Text Text Text Text<br>
-                    Text Text Text Text Text Text Text<br>
+                    BrainForge is an interactive platform designed for students and learners to master programming in a fun and engaging way.
+                    Instead of dry theory, you practice through exercises, tests, and visual tasks that help reinforce knowledge instantly.<br><br>
+                    Our goal is to make learning accessible to everyone and to motivate users to grow continuously.
+                    BrainForge offers different difficulty levels, allowing everyone to find suitable challenges — from simple exercises for beginners to complex problems for advanced programmers.<br><br>
                 </p>
-
-                <p>
-                    Text Text Text Text Text Text Text<br>
-                    Text Text Text Text Text Text Text<br>
-                    Text Text Text Text Text Text Text<br>
-                    Text Text Text Text Text Text Text<br>
-                    Text Text Text Text Text Text Text<br>
-                    Text Text Text Text Text Text Text<br>
+                <p style="max-width: 450px">
+                    BrainForge is designed for convenience and interactivity: an intuitive interface, responsive design, and helpful hints allow users to focus on learning without distractions.
+                    We constantly update tasks and add new materials to provide relevant knowledge and exciting challenges.<br><br>
+                    Join our community and unlock your potential in programming with BrainForge!
                 </p>
             </div>
         </div>
@@ -148,19 +142,25 @@
         <!-- Права частина -->
         <div class="about_right">
             <div class="user_story">
-                <div class="user_box">User</div>
-                <span>User story about platform</span>
+                <img class="user_story_image" src="images/pexels-olly-733872.jpg" alt="User Story">
+                <span>"Wow! I’ve been using BrainForge for a month and already noticed my programming skills improving dramatically!"</span>
             </div>
 
             <div class="user_story">
-                <div class="user_box">User</div>
-                <span>User story about platform</span>
+                <img class="user_story_image" src="images/premium_photo-1689568126014-06fea9d5d341.jpg" alt="User Story">
+                <span>"BrainForge makes learning programming so easy and fun. I finally understand concepts that used to confuse me."</span>
             </div>
+
+            <div class="user_story">
+                <img class="user_story_image" src="images/Man-Box-hero-scaled.jpg" alt="User Story">
+                <span>"Thanks to BrainForge, I completed my first real project in just a few weeks. Highly recommend it!"</span>
+            </div>
+
 
             <div class="divider"></div>
 
             <div class="contact_info">
-                <h3>Contact us</h3>
+                <h3 style="color: #00aaff">Contact us</h3>
 
                 <div class="contact_row">
                     <span>Phone</span>
