--- a/pages/practice.html
+++ b/pages/practice.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Practice</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link href="../css/styles_menu.css" rel="stylesheet" type="text/css">
+    <link href="../css/practice.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <section class="img_section">
@@ -22,5 +22,93 @@
     </div>
   </div>
 </section>
+<div class="wrapper">
+    <div class="task_rect">
+        <div class="left_side">
+            <div class="lang_tabs_wrapper" style="margin-top: -20px;">
+                <div class="stat_card dropdown" data-storage="language">
+                    <span class="stat_value">Java</span>
+                    <span class="stat_label">Language</span>
+
+                    <div class="lang_dropdown">
+                        <div class="lang_item">Java</div>
+                        <div class="lang_item">Python</div>
+                        <div class="lang_item">C++</div>
+                        <div class="lang_item">JavaScript</div>
+                    </div>
+                </div>
+
+                <div class="stat_card dropdown" data-storage="taskType">
+                    <span class="stat_value">Arrays</span>
+                    <span class="stat_label">Task type</span>
+
+                    <div class="lang_dropdown">
+                        <div class="lang_item">Arrays</div>
+                        <div class="lang_item">Strings</div>
+                        <div class="lang_item">Loops</div>
+                        <div class="lang_item">Functions</div>
+                        <div class="lang_item">Recursion</div>
+                        <div class="lang_item">Algorithms</div>
+                        <div class="lang_item">Debugging</div>
+                    </div>
+                </div>
+
+                <div class="stat_card dropdown" data-storage="complexity">
+                    <span class="stat_value">Hard</span>
+                    <span class="stat_label">Complexity</span>
+
+                    <div class="lang_dropdown">
+                        <div class="lang_item">Beginner</div>
+                        <div class="lang_item">Easy</div>
+                        <div class="lang_item">Medium</div>
+                        <div class="lang_item">Hard</div>
+                        <div class="lang_item">Expert</div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="little_buttons_wrapper">
+                <div class="little_button2"><a>Train</a></div>
+                <div class="little_button"><a>Skip</a></div>
+            </div>
+        </div>
+        <div class="right_side">
+            <div class="task_info">
+                <a>    Develop a program in Python that works with
+                    an array of integers. The program should read
+                    a sequence of numbers from the keyboard, store
+                    them in an array, find all even elements, calculate
+                    their average value, and display the result on the
+                    screen. If the array contains no even numbers, the
+                    program should display the message
+                    "No even elements".
+
+                    Example of execution:
+                    Enter numbers separated by spaces: 4 7 9 2 10 3
+                    Average of even numbers: 5.33
+                </a>
+            </div>
+        </div>
+
+    </div>
+</div>
+<div class="wrapper">
+    <div class="comm_rect">
+        <div class="row">
+            <h2>Discourse 💬</h2>
+            <a href="#" class="tab active">All</a>
+            <a href="#" class="tab">Questions</a>
+            <a href="#" class="tab">Suggestions</a>
+        </div>
+        <div class="comments">
+            <a>No comments yet. Start the first discussion.</a>
+        </div>
+        <div class="row comment_input">
+            <input type="text" placeholder="Write your comment..." />
+            <button>Send</button>
+        </div>
+    </div>
+</div>
+<script src="../js/practice.js"></script>
 </body>
 </html>
