--- a/pages/focus.html
+++ b/pages/focus.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Focus</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="../css/focus.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -23,18 +23,71 @@
     </div>
 </section>
 <div class="wrapper">
+<!--    <div class="task_rect">-->
+<!--        <div class="right_side">-->
+<!--            <div class="task_info" style="margin-top: 60px;">-->
+<!--                <a>You are given a piece of code with errors. The type of task determines the context (arrays, loops, functions), and the level of difficulty affects the number and visibility of errors: the more difficult the task, the more errors there are and the less obvious they are.-->
+<!--                    Your task is to find and correct all errors. Such tasks help develop focus, logic, and critical thinking.-->
+<!--                </a>-->
+<!--            </div>-->
+<!--            <div class="stats_row" style="margin-top: -20px;">-->
+<!--                <div class="stat_card dropdown" data-storage="language">-->
+<!--                    <span class="stat_value">Java</span>-->
+<!--                    <span class="stat_label">Language</span>-->
+
+<!--                    <div class="lang_dropdown">-->
+<!--                        <div class="lang_item">Java</div>-->
+<!--                        <div class="lang_item">Python</div>-->
+<!--                        <div class="lang_item">C++</div>-->
+<!--                        <div class="lang_item">JavaScript</div>-->
+<!--                    </div>-->
+<!--                </div>-->
+
+<!--                <div class="stat_card dropdown" data-storage="taskType">-->
+<!--                    <span class="stat_value">Arrays</span>-->
+<!--                    <span class="stat_label">Task type</span>-->
+
+<!--                    <div class="lang_dropdown">-->
+<!--                        <div class="lang_item">Strings</div>-->
+<!--                        <div class="lang_item">Loops</div>-->
+<!--                        <div class="lang_item">Functions</div>-->
+<!--                        <div class="lang_item">Algorithms</div>-->
+<!--                    </div>-->
+<!--                </div>-->
+
+<!--                <div class="stat_card dropdown" data-storage="complexity">-->
+<!--                    <span class="stat_value">Hard</span>-->
+<!--                    <span class="stat_label">Complexity</span>-->
+
+<!--                    <div class="lang_dropdown">-->
+<!--                        <div class="lang_item">Beginner</div>-->
+<!--                        <div class="lang_item">Easy</div>-->
+<!--                        <div class="lang_item">Medium</div>-->
+<!--                        <div class="lang_item">Hard</div>-->
+<!--                        <div class="lang_item">Expert</div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--        </div>-->
+<!--            <div class="little_buttons_wrapper">-->
+<!--                <div class="little_button2"><a>Train</a></div>-->
+<!--            </div>-->
+<!--        </div>-->
+
+<!--    </div>-->
     <div class="task_rect">
-        <div class="right_side">
-            <div class="task_info" style="margin-top: 60px;">
+        <div class="left_side">
+            <div class="task_info">
                 <a>You are given a piece of code with errors. The type of task determines the context (arrays, loops, functions), and the level of difficulty affects the number and visibility of errors: the more difficult the task, the more errors there are and the less obvious they are.
                     Your task is to find and correct all errors. Such tasks help develop focus, logic, and critical thinking.
                 </a>
             </div>
-            <div class="row" style="margin-top: -20px;">
+        </div>
+
+        <div class="right_side">
+            <div class="stats_column">
                 <div class="stat_card dropdown" data-storage="language">
                     <span class="stat_value">Java</span>
                     <span class="stat_label">Language</span>
-
                     <div class="lang_dropdown">
                         <div class="lang_item">Java</div>
                         <div class="lang_item">Python</div>
@@ -46,22 +99,17 @@
                 <div class="stat_card dropdown" data-storage="taskType">
                     <span class="stat_value">Arrays</span>
                     <span class="stat_label">Task type</span>
-
                     <div class="lang_dropdown">
-                        <div class="lang_item">Arrays</div>
                         <div class="lang_item">Strings</div>
                         <div class="lang_item">Loops</div>
                         <div class="lang_item">Functions</div>
-                        <div class="lang_item">Recursion</div>
                         <div class="lang_item">Algorithms</div>
-                        <div class="lang_item">Debugging</div>
                     </div>
                 </div>
 
                 <div class="stat_card dropdown" data-storage="complexity">
                     <span class="stat_value">Hard</span>
                     <span class="stat_label">Complexity</span>
-
                     <div class="lang_dropdown">
                         <div class="lang_item">Beginner</div>
                         <div class="lang_item">Easy</div>
@@ -71,14 +119,13 @@
                     </div>
                 </div>
 
-            <div class="little_buttons_wrapper">
-                <div class="little_button2"><a>Train</a></div>
+                <div class="little_buttons_wrapper">
+                    <div class="little_button2"><a>Train</a></div>
+                </div>
             </div>
         </div>
-
-        </div>
-
     </div>
+
 </div>
 <div class="wrapper">
     <div class="comm_rect">
@@ -97,6 +144,6 @@
         </div>
     </div>
 </div>
-<script src="../js/practice.js"></script>
+<script src="../js/focus.js"></script>
 </body>
 </html>
