--- a/pages/practice.html
+++ b/pages/practice.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Practice</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="../css/practice.css" rel="stylesheet" type="text/css">
 </head>
 <body>
