Add total redesign v1.1

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="upper_text_left">
             <a href="#" id="openModal4">Join our team</a>
-            <a href="#" id="openModal">Log in</a>
+            <a href="#" id="openModal" style="color: #00aaff">Log in</a>
         </div>
     </div>
 
@@ -180,10 +180,6 @@
 
     </div>
 </section>
-
-
-
-
 <script src="js/index.js"></script>
 </body>
 </html>
