--- a/pages/practice.html
+++ b/pages/practice.html
@@ -17,7 +17,7 @@
       <a href="chat_bot.html">AI assistant</a>
     </div>
     <div class="upper_text_left">
-      <a href="#">Join our team</a>
+      <a href="#" id="openModal4">Join our team</a>
       <a href="../index.html">Log out</a>
     </div>
   </div>
@@ -73,6 +73,7 @@
             </div>
         </div>
         <div class="right_side">
+            <h1 style="margin-left: -250px">Practice tasks 👉🧩</h1>
             <div class="task_info">
                 <a>    Develop a program in Python that works with
                     an array of integers. The program should read
@@ -106,6 +107,29 @@
         <div class="row comment_input">
             <input type="text" placeholder="Write your comment..." />
             <button>Send</button>
+        </div>
+    </div>
+</div>
+
+<div class="modal" id="modal4">
+    <div class="modal-content4">
+        <div class="modal4-left">
+            <h1>Join Our Team</h1>
+            <h3>
+                Send us your resume and become part of our development team.
+                We are always looking for motivated developers who are eager to learn,
+                grow professionally, and work on real projects.
+            </h3>
+        </div>
+
+        <div class="modal4-right">
+            <a href="mailto:brainforge.team@gmail.com
+  ?subject=Job Application
+  &body=Hello BrainForge Team,%0D%0A%0D%0AI would like to apply for a developer position.%0D%0APlease find my resume attached."
+               class="apply-btn">
+                Apply Now
+            </a>
+            <span class="close4" id="closeModal4">&times;</span>
         </div>
     </div>
 </div>
